# citrea2

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  book.toml  codespell_ignore.txt  deny.toml  l1_fee_overhead.md
.config/: nextest.toml
crates/bitcoin-da/: Cargo.toml  README.md
crates/bitcoin-da/src/: error.rs  fee.rs  lib.rs  metrics.rs  monitoring.rs  network_constants.rs  rpc.rs  service.rs  test_utils.rs  tx_signer.rs  verifier.rs
crates/bitcoin-da/src/fee/: config.rs  mod.rs
crates/bitcoin-da/src/helpers/: backup.rs  merkle_tree.rs  mod.rs  parsers.rs  test_utils.rs
crates/bitcoin-da/src/helpers/builders/: batch_proof_namespace.rs  body_builders.rs  light_client_proof_namespace.rs  mod.rs  test_utils.rs  tests.rs
crates/bitcoin-da/src/spec/: address.rs  blob.rs  block.rs  block_hash.rs  header.rs  header_stream.rs  mod.rs  proof.rs  short_proof.rs  transaction.rs  utxo.rs
crates/bitcoin-da/test_data/mainnet/: headers-40310-42346.txt  headers-872918-874954.txt
crates/bitcoin-da/test_data/testnet4/: headers-40310-42346.txt
crates/bitcoin-da/tests/: service.rs  test_utils.rs  verifier.rs
crates/citrea-stf/: Cargo.toml  README.md
crates/citrea-stf/src/: genesis_config.rs  hooks_impl.rs  lib.rs  runtime.rs  test_utils.rs  verifier.rs
crates/citrea-stf/tests/: blueprint.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  da.rs  error.rs  l2.rs  lib.rs  utils.rs
crates/common/src/backup/: manager.rs  metadata.rs  mod.rs  rpc.rs  utils.rs
crates/common/src/config/: mod.rs  rpc.rs
crates/common/src/db_migrations/: batch_and_slot_by_numbers.rs  mod.rs  remove_unused_common_tables.rs  soft_confirmation_tx_merkle_root.rs  verified_proofs.rs
crates/common/src/l2/: error.rs  mod.rs  utils.rs
crates/common/src/rpc/: auth.rs  da.rs  metrics.rs  mod.rs  server.rs  utils.rs
crates/common/src/tasks/: manager.rs
crates/common/tests/: health_check_integration.rs
crates/config/: Cargo.toml
crates/config/src/: bitcoin.rs  lib.rs  prover.rs  rollup.rs
crates/ethereum-rpc/: Cargo.toml
crates/ethereum-rpc/src/: ethereum.rs  lib.rs  subscription.rs  trace.rs
crates/ethereum-rpc/src/gas_price/: cache.rs  fee_history.rs  gas_oracle.rs
crates/evm/: Cargo.toml  README.md
crates/evm/src/: call.rs  genesis.rs  hooks.rs  lib.rs  metrics.rs  provider_functions.rs  query.rs
crates/evm/src/evm/: call.rs  compat.rs  conversions.rs  db.rs  db_commit.rs  db_init.rs  executor.rs  handler.rs  mod.rs  primitive_types.rs  system_events.rs  tests.rs
crates/evm/src/rpc_helpers/: filter.rs  mod.rs  responses.rs  tracing_utils.rs
crates/evm/src/signer/: mod.rs
crates/evm/src/smart_contracts/: blob_base_fee_contract.rs  g1_add_contract.rs  kzg_point_evaluation_caller.rs  logs_contract.rs  mcopy_contract.rs  mod.rs  p256_verify_contract.rs  schnorr_verify_contract.rs  selfdestructing_constructor.rs  simple_storage_duplicator_contract.rs  transient_storage_contract.rs
crates/evm/src/tests/: call_tests.rs  fork_tests.rs  genesis_tests.rs  hooks_tests.rs  mod.rs  sys_tx_tests.rs  test_signer.rs  tx_tests.rs  utils.rs
crates/fullnode/: Cargo.toml
crates/fullnode/src/: da_block_handler.rs  error.rs  l2_syncer.rs  lib.rs  metrics.rs  rpc.rs  runner.rs
crates/fullnode/src/db_migrations/: mod.rs  remove_unused_common_tables.rs  soft_confirmation_tx_merkle_root.rs  verified_batch_proof_encoding.rs
crates/fullnode/tests/: hash_stf.rs  runner_initialization_tests.rs
crates/light-client-prover/: Cargo.toml
crates/light-client-prover/src/: circuit.rs  da_block_handler.rs  input.rs  lib.rs  metrics.rs  rpc.rs  runner.rs  services.rs  utils.rs
crates/light-client-prover/src/circuit/: accessors.rs  initial_values.rs  log.rs  mod.rs  utils.rs
crates/light-client-prover/src/db_migrations/: mod.rs  remove_unused_common_tables.rs
crates/light-client-prover/src/tests/: mod.rs  test_utils.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: basefee.rs  compression.rs  constants.rs  forks.rs  lib.rs  merkle.rs  types.rs  zk_dev_mode.rs
crates/prover/: Cargo.toml
crates/prover-services/: Cargo.toml
crates/prover-services/src/: lib.rs  metrics.rs  parallel.rs
crates/prover-services/src/parallel/: mod.rs  prover.rs
crates/prover-services/tests/: prover_tests.rs
crates/prover/src/: runner.rs
crates/risc0/: Cargo.toml
crates/risc0/src/: config.rs  guest.rs  host.rs  lib.rs
crates/risc0/src/host/: bonsai.rs  boundless.rs  config.rs  local.rs  mod.rs  pricing_service.rs
crates/short-header-proof-provider/: Cargo.toml
crates/short-header-proof-provider/src/: lib.rs  native.rs  zk.rs
crates/short-header-proof-provider/tests/: shp_integration.rs
crates/sovereign-sdk/adapters/mock-da/: Cargo.toml
crates/sovereign-sdk/module-system/sov-keys/: Cargo.toml
crates/sovereign-sdk/module-system/sov-modules-rollup-blueprint/: Cargo.toml
crates/sovereign-sdk/module-system/sov-modules-stf-blueprint/: Cargo.toml
crates/sovereign-sdk/module-system/sov-state/: Cargo.toml
crates/sovereign-sdk/rollup-interface/: Cargo.toml  Makefile
crates/sovereign-sdk/rollup-interface/src/: lib.rs  network.rs  spec.rs
crates/storage-ops/: Cargo.toml
crates/storage-ops/src/: lib.rs  macros.rs  tests.rs  types.rs  utils.rs
crates/storage-ops/src/pruning/: criteria.rs  mod.rs  service.rs  state.rs  types.rs
crates/storage-ops/src/rollback/: ledger.rs  mod.rs  native.rs  service.rs  state.rs  types.rs
guests/risc0/: Cargo.toml  Dockerfile  Makefile  build.rs
guests/risc0/batch-proof/: Cargo.toml  build.rs
guests/risc0/batch-proof-bitcoin/: Cargo.toml
guests/risc0/batch-proof-mock/: Cargo.toml
guests/risc0/batch-proof/bitcoin/: Cargo.toml
guests/risc0/batch-proof/mock/: Cargo.toml
guests/risc0/light-client-proof/: Cargo.toml  build.rs
guests/risc0/light-client-proof-bitcoin/: Cargo.toml
guests/risc0/light-client-proof-mock/: Cargo.toml
guests/risc0/light-client-proof/bitcoin/: Cargo.toml
guests/risc0/light-client-proof/mock/: Cargo.toml
(+458 files in other folders)
