[package]
name = "citrea-stf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = true }
borsh = { workspace = true }
# will be needed after we update the storage system
# tokio = { workspace = true, features = ["sync"], optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

sov-accounts = { path = "../sovereign-sdk/module-system/module-implementations/sov-accounts", default-features = false }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-state = { path = "../sovereign-sdk/module-system/sov-state", optional = true }

citrea-common = { path = "../common" }
citrea-evm = { path = "../evm" }
soft-confirmation-rule-enforcer = { path = "../soft-confirmation-rule-enforcer" }

[features]
default = []
native = [
  "sov-accounts/native",
  "sov-modules-api/native",
  "sov-rollup-interface/native",
  "sov-modules-stf-blueprint/native",
  "soft-confirmation-rule-enforcer/native",
  "sov-state",
  "citrea-evm/native",
  "dep:jsonrpsee",
  "dep:tracing",
  "dep:anyhow",
  "dep:serde_json",
  "sov-accounts/serde",
  "soft-confirmation-rule-enforcer/native",
]
